fix: alert z-index

--- a/components/alerts/alert.css
+++ b/components/alerts/alert.css
@@ -17,7 +17,7 @@
   display: flex;
   align-items: center;
   position: fixed;
-  z-index: 10;
+  z-index: 1;
   bottom: 1rem;
   left: 1rem;
 }
